@@ -1,3 +1,5 @@
+- Bug fix: Fixed update object cache when changing class or provider strategy
+
 1.8.1 (22-02-2021)
 - Bug fix: Fixed update object cache when profile is deleted
 
